Fix View button being off-screen on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ html, body { height: 100%; background-color: #424242; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body {
-  overflow: hidden;
+  overflow: auto;
 }
 
 .hidden {
